fixed imports and controller