@@ -12,13 +12,12 @@ import booktrack.user.User;
 import booktrack.user.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.awt.print.Pageable;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -119,6 +118,6 @@ public class LoanService {
 
         return overdueLoans.stream()
                 .map(loanMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
